# cmdai

./: .gitignore  2025-09-12-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-13-agents.txt  2025-09-13-caveat-the-messages-below-were-generated-by-the-u.txt  2025-09-13-readme.txt  2025-10-01-vscode-run-tests.txt  2025-10-03-phase3.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  TDD-WORKFLOW.md  TECH_DEBT.md  clippy.toml  deny.toml  rustfmt.toml
.claude/agents/: dev-team-coordinator.md  docs-release-manager.md  dx-product-manager.md  llm-integration-expert.md  macos-unix-systems-expert.md  oss-legal-advisor.md  oss-rust-cli-architect.md  pragmatic-tech-lead.md  qa-testing-expert.md  rust-cli-architect.md  rust-cli-builder.md  rust-cli-expert.md  rust-production-architect.md  rust-refactor-expert.md  spec-driven-dev-guide.md  tdd-rust-engineer.md  tdd-rust-watcher.md  technical-writer.md
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: backend_integration.yml  bug_report.yml  config.yml  feature_request.yml  safety_pattern.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
benches/: performance.rs
exports/: README.md
exports/session-logs/: 2025-09-13-gitignore.txt  2025-10-01-Phase2.txt  2025-10-01-TDD-Green-moduleB.txt  2025-10-01-check-the-pr.txt  2025-10-01-green-moduleB-review.txt  2025-10-01-improve-test-runner.txt
specs/001-create-a-comprehensive/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-a-comprehensive/contracts/: backend-trait.rs  cli-interface.rs  safety-validator.rs
specs/002-implement-tdd-green/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-implement-core-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/backends/: mod.rs
src/cache/: manifest.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs  schema.rs
src/execution/: mod.rs  shell.rs
src/logging/: mod.rs  redaction.rs
src/models/: mod.rs
src/safety/: mod.rs  patterns.rs
tests/: backend_trait_contract.rs  cache_contract.rs  cli_interface_contract.rs  config_contract.rs  error_handling_tests.rs  execution_contract.rs  infrastructure_integration.rs  integration_tests.rs  logging_contract.rs  property_tests.rs  quickstart_scenarios.rs  safety_validator_contract.rs
(+4 files in other folders)
